--- a/src/components/AppDownload/styles.css
+++ b/src/components/AppDownload/styles.css
@@ -49,3 +49,37 @@
     margin: 0px;
     overflow: hidden;
 }
+
+@media (max-width: 1024px) {
+.section {
+    padding-top: 0;
+}
+.section__text {
+    position: relative;
+    left: 0;
+    text-align: center;
+}
+.section__badge {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding-top: 30px;
+}
+
+.section__text span {
+    font-size: 20px;
+    line-height: 20px;
+    color: #333;
+  }
+
+.section__bottom {
+    height: 450px;
+    position: relative;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+    padding-top: 70px;
+}
+
+}
