--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -2,3 +2,53 @@
     background-color: #FAFAFA;
     height: 100vh;
 }
+
+.main-container {
+    background-image: url("../../assets/bcg.png");
+    background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    width: 100%;
+    height: 464px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-container__input {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-bottom: 20px;
+}
+.google-places-autocomplete {
+    position: unset;
+  }
+
+.main-container__icon svg {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    margin: 105px 0 0 12px;
+    color: #333;
+    z-index: 1;
+}
+
+.main-container__error {
+    color: #f00;
+}
+
+@media (max-width: 1024px) {
+    .main-container {
+    left: 0;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    height: 360px;
+    background-size: auto 360px;
+    }
+
+    .main-container__icon svg {
+        margin: 140px 0 0 12px;
+    }
+}
