--- a/src/Pages/ProductsList/styles.css
+++ b/src/Pages/ProductsList/styles.css
@@ -85,7 +85,7 @@
 }
 
 .products__card {
-    display: flex;
+  display: flex;
   cursor: pointer;
   position: relative;
   box-sizing: border-box;
@@ -109,116 +109,151 @@
 }
 
 .products__card hr {
-    width: 100%;
-    margin: 0px;
-    border-top: 0.4px solid rgb(247, 247, 247);
+  width: 100%;
+  margin: 0px;
+  border-top: 0.4px solid rgb(247, 247, 247);
 }
 
 .card__image {
-    width: 100%;
-    height: 110px;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;  
+  width: 100%;
+  height: 110px;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
 }
 
 .card__image img {
-    height: 96px;
-    width: 88px;
-    align-self: center;
-    padding: 16px;
+  height: 96px;
+  width: 88px;
+  align-self: center;
+  padding: 16px;
 }
 
 .card__title {
-    padding: 8px;
-    max-height: 32px;
+  padding: 8px;
+  max-height: 32px;
 }
 
 .card__title p {
-    text-align: left;
-    color: rgb(153, 153, 153);
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    line-height: 16px;
-    overflow: hidden;
+  text-align: left;
+  color: rgb(153, 153, 153);
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px;
+  overflow: hidden;
 }
 
 .card__price {
-    margin: 10px auto;
-    padding-top: 10px;
-    font-weight: bold;
-    color: rgb(51, 51, 51);
+  margin: 10px auto;
+  padding-top: 10px;
+  font-weight: bold;
+  color: rgb(51, 51, 51);
 }
 
 .add__button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto 8px auto;
-    background-color: #ffc500;
-    color: #fff;
-    font-size: 17px;
-    font-weight: 700;
-    border: 0 solid #fff;
-    border-radius: 3px;
-    box-shadow: 0 0 0 0 #fff;
-    width: 120px;
-    height: 40px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 8px auto;
+  background-color: #ffc500;
+  color: #fff;
+  font-size: 17px;
+  font-weight: 700;
+  border: 0 solid #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 0 0 #fff;
+  width: 120px;
+  height: 40px !important;
 }
 
 .covid__container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 12px;
-    width: 576px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
+  width: 576px;
 }
 
 .covid__infocard {
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 4px 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    max-width: 576px;
-    width: 100%;
-    cursor: pointer;
-    background-color: rgb(230, 230, 230);
-    border-radius: 8px;
-    margin-top: 40px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 4px 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 576px;
+  width: 100%;
+  cursor: pointer;
+  background-color: rgb(230, 230, 230);
+  border-radius: 8px;
+  margin-top: 40px;
 }
 
-.covid__infocard span{
-    width: 100%;
-    text-align: center;
-    padding-left: 32px;
+.covid__infocard span {
+  width: 100%;
+  text-align: center;
 }
 
-.covid__infocard p{
-    font-size: 14px;
-    color: #333;
+.covid__infocard p {
+  font-size: 14px;
+  color: #333;
 }
 
 .covid__figure {
-    display: flex;
-    flex-shrink: 0;
-    margin: 0px 0px 0px 20px;
-    padding: 4px;
+  display: flex;
+  flex-shrink: 0;
+  margin: 0px 0px 0px 20px;
+  padding: 4px;
 }
 
 .covid__figure img {
-    width: 64px;
-    height: 64px;
+  width: 64px;
+  height: 64px;
 }
 
 .loading__gif img {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 }
-/* 
-@media (min-width: 575.98px)
-<style>
-.css-imfncl-card-infoCard {
-    padding: 0px 32px;
-} */
+
+@media (max-width: 1024px) {
+  .products__container {
+    justify-self: flex-start;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 8px;
+  }
+
+  .products__categories {
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    max-width: 1200px;
+    flex-flow: wrap;
+    padding: 16px;
+  }
+
+  .products__category {
+    flex: 1 1 47%;
+  }
+
+  .covid__container {
+    width: 343px;
+    margin-bottom: 20px;
+  }
+
+  .covid__infocard span {
+    width: 100%;
+    text-align: left;
+    padding-left: 16px;
+  }
+
+  .products__maincontainer {
+    overflow-x: auto;
+  }
+}
